--- a/html/index.html
+++ b/html/index.html
@@ -25,10 +25,10 @@
         <div class="navbar-links" >
         <ul>
             <li><a href="./club.html" target="_blank">El club</a></li>
-            <li><a href="./activities.html" target="_blank">Actividades</a></li>
-            <li><a href="./about.html" target="_blank">Nosotros</a></li>
-            <li><a href="./access.html" target="_blank">Biblioteca</a></li>
-            <li><a href="./access.html" target="_blank">Contacto</a></li>
+            <li><a href="./actividades.html" target="_blank">Actividades</a></li>
+            <li><a href="./nosotros.html" target="_blank">Nosotros</a></li>
+            <li><a href="./biblioteca.html" target="_blank">Biblioteca</a></li>
+            <li><a href="./contacto.html" target="_blank">Contacto</a></li>
             <li><a href="./access.html" target="_blank">Accede</a></li>
         </ul>
         </div>
