--- a/html/contacto.html
+++ b/html/contacto.html
@@ -41,23 +41,8 @@
             <div class="col-md-6">
               <div class="contact-detail">
                 <h1 class="section-title">Contacta Con Nosotros</h1>
-                <!--
                 <ul class="contact-ul">
-                  <li>
-                    </i> EL club de la buena vida se compromete a llevar la vida que pueda, discula si tardamos en contestar</li>
-                  <li>
-                    <a href="tel:000000000"><b>+34 000000000</b></a>
-                  </li>
-      
-                  <li>
-                    <a href="mailto:info@clubdelavidabuena.com"><b> info@clubdelavidabuena.com</b></a>
-                  </li>
-                </ul>
-                -->
-                <ul class="contact-ul">
-                    <li>
-                    </i> EL club de la buena vida se compromete a llevar la vida que pueda, discula si tardamos en contestar.</li>
-                  <li>
+                    <li>EL club de la vida buena se compromete a llevar la vida que pueda, disculpa si tardamos en contestar.</li>
                 </ul>
               </div>
             </div>
@@ -84,10 +69,9 @@
                   <div class="col-12">
                     <textarea class="inptFld" rows="" cols="" placeholder="Tu mensaje" required></textarea>
                   </div>
-                  <!--
-                  <div class="col-12">
+                  <div class="submit">
                     <input type="submit" name="submit" value="Enviar" class="inptBtn" />
-                  </div>-->
+                  </div>
                 </div>
 
               </form>
@@ -95,11 +79,6 @@
             </div>
           </div>
         </div>
-
-        <div class="submit">
-            <input type="submit" name="submit" value="Enviar" class="inptBtn" />
-        </div>
-      
 
         <div style="text-align: center; margin-top: 20px;">
             <p> 
