--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -43,23 +43,14 @@
     </form>
 
     <div class="authors">
-        <div class="template">
-            <img class="auth-img" src="../images/imiguens.jpg" alt="Iria Miguens">
-            <div class="data">
-                <h3>Iria Miguens</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum cumque adipisci sed est accusantium repudiandae velit voluptas quasi iure. Nihil eius nulla dolore labore delectus et dolorem. Minus, nesciunt eveniet.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            </div>
-        </div>
-
+        
         <div class="template">
             <img class="auth-img" src="../images/agomeze.jpg" alt="Antón Gómez">
             <div class="data">
                 <h3>Antón Gómez-Escolar</h3>
                 <ul class="p-links">
-                    <li>Papers</li>
-                    <li>Ponencia</li>
+                    <li><img src="../images/" alt=""></li>
+                    <li><img src="../images/" alt=""></li>
                     <li>Guía del renacimiento psicodélico</li>
                 </ul>
             </div>
