--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -35,7 +35,8 @@
     
     </header>
 
-    <div class="authors">
+    <!--<div class="authors">
+
         <div class="template">
             <img class="auth-img" src="../images/Lele.png" alt="Liliana Zambrano">
             <div class="data">
@@ -63,17 +64,20 @@
                     concursos de relatos en Venezuela.
                 </p>
             </div>
-        </div>
+        </div>-->
 
         <div class="persons">
             <div class="person">
-                <img src="../images/Lele.png" alt="Liliana Zambrano">
+                <img class="profile" src="../images/Lele.png" alt="Liliana Zambrano">
+                <p class="name">Liliana Zambrano</p>
             </div>
             <div class="person">
-                <img src="../images/Antonio.png" alt="Antonio Ayuso">
+                <img class="profile" src="../images/Antonio.png" alt="Antonio Ayuso">
+                <p class="name">Antonio Ayuso</p>
             </div>
             <div class="person">
-                <img src="../images/Marta.png" alt="Marta rodriguez">
+                <img class="profile" src="../images/Marta.png" alt="Marta rodriguez">
+                <p class="name">Marta Rodríguez</p>
             </div>
         </div>
 <!--
