--- a/html/index copy.html
+++ b/html/index copy.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/index copy.css">
     <script src="../js/script.js"></script>
-    <title>Document</title>
+    <title>Club de  la vida buena</title>
 </head>
 <body>
     <header>
