--- a/html/index copy.html
+++ b/html/index copy.html
@@ -68,5 +68,27 @@
         </div>
 
     </div>
+
+    <footer>
+        <div class="foot-logo">
+          <a href="https://www.instagram.com/clubdelavidabuena/"><img src="../images/icons8-instagram-50.png" alt=""></a>  
+        </div>
+        <div class="foot-logo">
+            <a href=""><img src="../images/icons8-facebook-50.png" alt=""></a>
+        </div>
+        <div class="foot-logo">
+            <a href=""><img src="../images/icons8-linkedin-50.png" alt=""></a>
+        </div>
+        <div class="foot-logo">
+            <a href=""><img src="../images/icons8-youtube-50.png" alt=""></a>
+        </div>
+        <div class="foot-logo">
+            <a href=""><img src="../images/icons8-whatsapp-50.png" alt=""></a>
+        </div>
+        <div class="foot-logo">
+            <a href="mailto:info@elclubdelavidabuena.com"><img src="../images/icons8-email-50.png" alt=""></a>
+        </div>
+    </footer>
+
 </body>
 </html>
