--- a/html/nosotros-circles.html
+++ b/html/nosotros-circles.html
@@ -22,7 +22,7 @@
             <div class="navbar-links" >
             <ul>
                 <li><a href="./index copy.html" target="_blank">El club</a></li>
-                <li><a href="./actividades.html" target="_blank">Actividades</a></li>
+                <li><a target="_blank">Actividades</a></li>
                 <li><a href="./nosotros.html" target="_blank">Nosotros</a></li>
                 <li><a href="./biblioteca.html" target="_blank">Biblioteca</a></li>
                 <li><a href="./contacto.html" target="_blank">Contacto</a></li>
