--- a/html/biblio2.html
+++ b/html/biblio2.html
@@ -22,7 +22,7 @@
     
             <div class="navbar-links" >
             <ul>
-                <li><a href="./club.html" target="_blank">El club</a></li>
+                <li><a target="_blank">El club</a></li>
                 <li><a target="_blank">Actividades</a></li>
                 <li><a href="./nosotros.html" target="_blank">Nosotros</a></li>
                 <li><a href="./biblioteca.html" target="_blank">Biblioteca</a></li>
