--- a/html/index copy.html
+++ b/html/index copy.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a target="_blank">El club</a></li>
                 <li><a target="_blank">Actividades</a></li>
-                <li><a href="./nosotros.html" target="_blank">Nosotros</a></li>
+                <li><a href="./nosotros-circles.html" target="_blank">Nosotros</a></li>
                 <li><a href="./biblioteca.html" target="_blank">Biblioteca</a></li>
                 <li><a href="./contacto.html" target="_blank">Contacto</a></li>
                 <li><a href="./access.html" target="_blank">Accede</a></li>
