--- a/html/club.html
+++ b/html/club.html
@@ -23,7 +23,7 @@
             <div class="navbar-links" >
             <ul>
                 <li><a target="_blank">El club</a></li>
-                <li><a target="_blank">Actividades</a></li>
+                <li><a href="./actividades" target="_blank">Actividades</a></li>
                 <li><a href="./nosotros-circles.html" target="_blank">Nosotros</a></li>
                 <li><a href="./biblioteca.html" target="_blank">Biblioteca</a></li>
                 <li><a href="./contacto.html" target="_blank">Contacto</a></li>
